--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,3 +1,4 @@
 <Text children={`Hi.`} sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }} />
 
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+안녕하세요  
+다양한 것을 탐구하고 있습니다  
