--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -3,6 +3,10 @@ title: About
 slug: "/about"
 ---
 
-Hi!
+👋 Hello There!  
 
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+안녕하세요
+저는 숭실대학교 AI융합학부 2학년 수료 후, 군대에 입대하게 된 이민우라고 합니다.  
+자바와 파이썬을 주로 하고 있습니다.  
+
+자세한 내용은 [노션](https://dlalsdn.notion.site)을 참고해주세요 :)
